Removed .csv and scrap sheet

--- a/HeartRate.ipynb
+++ b/HeartRate.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "       'HKQuantityTypeIdentifierHeartRateVariabilitySDNN'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +113,13 @@
     "df['@startDate'] = pd.to_datetime(df['@startDate'],\n",
     "                                  format=format)\n",
     "df['@endDate'] = pd.to_datetime(df['@endDate'],\n",
-    "                                format=format)"
+    "                                format=format)\n",
+    "df['@creationDateOnly'] = df['@creationDate'].dt.date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -145,10 +146,11 @@
        "MetadataEntry                                                       object\n",
        "@device                                                             object\n",
        "HeartRateVariabilityMetadataList                                    object\n",
+       "@creationDateOnly                                                   object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +161,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>@value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@creationDate</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-02-13 22:25:18-04:00</th>\n",
+       "      <td>69.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-13 22:30:47-04:00</th>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-13 22:31:23-04:00</th>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-13 22:31:27-04:00</th>\n",
+       "      <td>69.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-13 22:31:32-04:00</th>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01 18:23:11-04:00</th>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01 18:28:52-04:00</th>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01 18:32:50-04:00</th>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01 18:38:20-04:00</th>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01 18:42:25-04:00</th>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>127096 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           @value\n",
+       "@creationDate                    \n",
+       "2020-02-13 22:25:18-04:00    69.0\n",
+       "2020-02-13 22:30:47-04:00    77.0\n",
+       "2020-02-13 22:31:23-04:00    74.0\n",
+       "2020-02-13 22:31:27-04:00    69.0\n",
+       "2020-02-13 22:31:32-04:00    70.0\n",
+       "...                           ...\n",
+       "2020-10-01 18:23:11-04:00    76.0\n",
+       "2020-10-01 18:28:52-04:00    85.0\n",
+       "2020-10-01 18:32:50-04:00    75.0\n",
+       "2020-10-01 18:38:20-04:00    84.0\n",
+       "2020-10-01 18:42:25-04:00    75.0\n",
+       "\n",
+       "[127096 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_rate_by_creation = heart_rate.groupby('@creationDate').sum()\n",
+    "heart_rate_by_creation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -178,21 +291,19 @@
        "Freq: M, Name: @value, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heart_rate_by_creation = heart_rate.groupby('@creationDate').sum()\n",
-    "heart_rate_by_creation\n",
     "by_day = heart_rate_by_creation['@value'].resample('M').sum()\n",
     "by_day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +312,7 @@
        "<AxesSubplot:xlabel='@creationDate'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,10 +347,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>@value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>@creationDateOnly</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-02-13</th>\n",
+       "      <td>72.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-14</th>\n",
+       "      <td>72.171400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-15</th>\n",
+       "      <td>73.341418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-16</th>\n",
+       "      <td>90.551067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-17</th>\n",
+       "      <td>77.331632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-27</th>\n",
+       "      <td>72.816614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-28</th>\n",
+       "      <td>107.628683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-29</th>\n",
+       "      <td>88.305299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-30</th>\n",
+       "      <td>65.409850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>102.079101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>228 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       @value\n",
+       "@creationDateOnly            \n",
+       "2020-02-13          72.375000\n",
+       "2020-02-14          72.171400\n",
+       "2020-02-15          73.341418\n",
+       "2020-02-16          90.551067\n",
+       "2020-02-17          77.331632\n",
+       "...                       ...\n",
+       "2020-09-27          72.816614\n",
+       "2020-09-28         107.628683\n",
+       "2020-09-29          88.305299\n",
+       "2020-09-30          65.409850\n",
+       "2020-10-01         102.079101\n",
+       "\n",
+       "[228 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_rate_mean_by_day = heart_rate.groupby('@creationDateOnly').mean()\n",
+    "heart_rate_mean_by_day"
+   ]
   }
  ],
  "metadata": {
