--- a/Calories_Output.ipynb
+++ b/Calories_Output.ipynb
@@ -207,18 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-39-9d6cc4ed6ee5>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-39-9d6cc4ed6ee5>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    calories_by_start.drop(['@startdate'2020-02-13'])\u001b[0m\n\u001b[1;37m                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "calories_by_start.to_csv('calories_by_start.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
